# wiki-extractor-rs

./: .gitignore  Cargo.toml  README.md  hoge.txt  output_example.md  run_example.sh
src/: lib.rs  list_parser.rs  main.rs  output.rs  parser.rs  template_parser.rs  wiki_page_iterator.rs
src/output/: output_json.rs
src/parser/: common_parser.rs  list_parser.rs  model.rs  template_parser.rs
